lab1/Test/L1-A-1-15.cmm
struct Z4FZu6TQ2 while R6lWCBQNMarkee ( float r6w8T7 
  [ 596415430 ] [ 646543617 ] ) {
  if ( - KxR ( ) = 1255644614.243779401 [ aG5KZMT 
    ( KSghiJBbqGr ) / cSfsSxoaVvSlZ6KsXszO - yhSCFrBE2Tj0xG15JrKS 
    - JPzaJdCQlm3QErVCat + evhnyeyMabM + lRBhhVpHtyfa 
    < XJMITd9np6NavOB > aBwkBJkJ <= WXzdBciNL != Kn71qcmBDH 
    > HQfoJ1ZOG68an < UnBxWJ6L != i5XNhPkvHsgj9n0S >= 
    ROUiSS2oPkzdLjK10Te != bXIPvdo4Kq < TJ7ukyBVJrU && 
    ZcaKIYM || W8TQvnI || yjNk ] = Rq / _bWUyBiUezH4lybdD 
    * GbfA8tEALpIl / aByOrY2Z0j >= * D / s7c9qeDuYiL49 
    / rDsa62CoIdrg > L2ueEeURth1 || sMDuSMcJ || zIGW_OtOWSnpzkN3DZGl 
    || xsoMT_dva6_flV )   if > ( ! HK0k / _DPn5Fho7ZDpQ 
    == c3CJPsWIc1Vxsz31 >= LDOJJ88qfWypMD_6vF < rrX0p5X 
    < v_fNv2PX5 || nDuEKN7j63vKxBoiuA )   dc7CG ;
else   yw7mNEiRW3mL1z ;

else   if ( Sn3nQGCD1N5skbsuj )   FgclkdmAcEQtI5euYH 
    ;


}
